--- a/package.json
+++ b/package.json
@@ -10,18 +10,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.5.1",
+    "@hookform/resolvers": "^3.3.2",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^1.9.7",
     "react": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
-    "react-native": "0.72.7",
+    "react-native": "^0.72.7",
+    "react-native-dotenv": "^3.4.9",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.0.2",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
