--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kdAppMobile",
-  "displayName": "KD APPde",
+  "displayName": "KD APP",
   "version": "0.0.1",
   "private": true,
   "scripts": {
