--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^1.9.7",
+    "@types/lodash": "^4.14.202",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "react-native": "^0.72.7",
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-paper": "^5.12.2",
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
